# pj-co2-device

./: pyproject.toml  reset.py  run.py  temperature_offset.py  test.py
src/grove/: grove_co2_scd30.py
